; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_physical.c_physical_DeleteQueue.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_physical.c_physical_DeleteQueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.physical = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @physical_DeleteQueue(%struct.physical* %0) #0 {
  %2 = alloca %struct.physical*, align 8
  store %struct.physical* %0, %struct.physical** %2, align 8
  %3 = load %struct.physical*, %struct.physical** %2, align 8
  %4 = getelementptr inbounds %struct.physical, %struct.physical* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.physical*, %struct.physical** %2, align 8
  %9 = getelementptr inbounds %struct.physical, %struct.physical* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @m_freem(i32* %10)
  %12 = load %struct.physical*, %struct.physical** %2, align 8
  %13 = getelementptr inbounds %struct.physical, %struct.physical* %12, i32 0, i32 1
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.physical*, %struct.physical** %2, align 8
  %16 = getelementptr inbounds %struct.physical, %struct.physical* %15, i32 0, i32 0
  %17 = call i32 @link_DeleteQueue(i32* %16)
  ret void
}

declare dso_local i32 @m_freem(i32*) #1

declare dso_local i32 @link_DeleteQueue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
